--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,53 @@ header{
 header img{
 	height: 45px;
 }
+footer{
+	background: #2b2b2b;
+	padding: 10px 0px 30px 0px;
+}
+footer ul{
+	list-style-type: none;
+}
+h3{
+	color: #ffffff;
+}
+p{
+	font-family: 'avenir';	
+	font-size: 15px;
+	line-height: 29.92px;
+	text-align: center;
+	letter-spacing: normal; 
+	color: #666666;
+}
+footer ul .lienfooter {
+	font-family: 'avenir-bold';
+	font-size: 17.6px;
+	text-align: center;
+	letter-spacing: normal;
+    word-spacing: 3px;
+    padding: 20px;
+}
+footer ul .imagefooter {
+	text-align: center;
+    vertical-align: middle;
+}
+footer ul .imagefooter .logo{
+	margin: 15px 10px;
+    height: 55px;
+}
+footer ul .imagefooter .titlefooter{
+	display: inline-block;
+    vertical-align: middle;
+    margin: 0px 10px;
+    margin-top: -83px;
+    font-family: "avenir-bold";
+    color: #fff;
+    font-size: 20px;
+}
+footer ul .linkWeb{
+	text-align: center;
+}
+a{
+	color: #ed1450;
+	text-decoration: none;
+}
